set up UI page for individual button for teachers

--- a/SafariTeacher/app/src/main/res/values/strings.xml
+++ b/SafariTeacher/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="app_description">Made easy for any teacher to teach</string>
 
     <string name="title_home">Welcome to Safari Teachers</string>
-    <string name="title_scannedLogs">View All Scanned Logs</string>
-    <string name="title_qrContent">View All Scanned Logs</string>
-    <string name="title_transMessage">View All Scanned Logs</string>
-    <string name="title_helpAlerts">View All Scanned Logs</string>
+    <string name="title_scannedLogs">View Scanned Logs</string>
+    <string name="title_scannedLogsList">Scanned Logs</string>
+    <string name="title_qrContent">Update Content of QR Codes</string>
+    <string name="title_qrContentPage">Scan QR Code</string>
+    <string name="title_transMessage">Update Transition Messages</string>
+    <string name="title_transMessageList">Transition Messages</string>
+    <string name="title_helpAlerts">View Help Alerts</string>
+    <string name="title_helpAlertsList">Help Alerts</string>
 </resources>
