integrated settings page as the latest feature for teacher's app

--- a/SafariTeacher/app/src/main/res/values/strings.xml
+++ b/SafariTeacher/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="title_transMessageList">Tap message to update</string>
     <string name="title_helpAlerts">View Help Alerts</string>
     <string name="title_helpAlertsList">Help Alerts</string>
+    <string name="title_settings">Update Settings</string>
+    <string name="title_settingsPage">Tap setting to update</string>
 </resources>
