rendered UI for student's setting page and implemented functionalities as well

--- a/SafariTeacher/app/src/main/res/values/strings.xml
+++ b/SafariTeacher/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="title_helpAlertsList">Help Alerts</string>
     <string name="title_settings">Update Settings</string>
     <string name="title_settingsPage">Tap setting to update</string>
+    <string name="title_activity_settings">Settings</string>
+
 </resources>
